[package]
name = "e-baltica"
description = "Baltic E-Services library for Rust"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/itsbalamurali/e-baltica"
publish = false
license = "MIT"

#[[bin]]
#name = "ariregister"
#path = "main.rs"
#
#[lib]
#name = "libbaltica"
#path = "src/lib.rs"
#crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["json","stream","gzip"] }
strum = { version = "0.25", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
x509-parser = "0.15"
openssl = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
thiserror = "1"
regex = "1"
anyhow = "1"
base64 = "0.21.1"
tokio = { version = "1", features = ["full"] }
quick-xml = { version = "0.28", features = ["serde","overlapped-lists","async-tokio","serialize"] }
validator = { version = "0.16", features = ["derive"] }
# zip = "0.6"
# csv = "1.2"
